--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -46,6 +46,7 @@ jobs:
                                                 --name $(GITHUB-SERVICE-ENDPOINT-NAME) 
                                                 --org $(System.TeamFoundationCollectionUri)
                                                 --project $(ADO-PROJECT-NAME)
+    continueOnError: true
     displayName: 'Create Github Service Endpoint'
   
   - bash:
@@ -60,6 +61,7 @@ jobs:
                                           --name $(AZURE-SERVICE-ENDPOINT-NAME)
                                           --org $(System.TeamFoundationCollectionUri) 
                                           --project $(ADO-PROJECT-NAME)
+    continueOnError: true
     displayName: 'Create Azure Service Connection'
 
   - bash:
