--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -88,7 +88,7 @@ jobs:
   - bash:
       gh repo clone ai-factory-azure/project-$(PROJECT-NAME)-controller
       cd ai-factory-azure/project-$(PROJECT-NAME)-controller/devops-pipelines
-      sed -i 's/project-template-file-batch-code/$(PROJECT-NAME)/' * 
+      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' * 
       git commit -am "modified yml to reflect new repo name"
       git push 
     continueOnError: true
