--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -87,12 +87,20 @@ jobs:
 
   - bash:
       git clone ai-factory-azure/project-$(PROJECT-NAME)-controller
+    continueOnError: true  
+    displayName: 'Pull git repo controller and modify yml to reflect new repo name'  
+  - bash:
       cd ai-factory-azure/project-$(PROJECT-NAME)-controller/devops-pipelines
+    continueOnError: true  
+  - bash:
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' * 
+    continueOnError: true  
+  - bash:
       git commit -am "modified yml to reflect new repo name"
+    continueOnError: true  
+  - bash:
       git push 
     continueOnError: true
-    displayName: 'Pull git repo controller and modify yml to reflect new repo name'  
 
   - bash:
       gh repo create ai-factory-azure/project-$(PROJECT-NAME)-iac -p $(IAC-TEMPLATE) --private --confirm
