added https in url for cloning

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -86,7 +86,7 @@ jobs:
     displayName: 'Create git repo for the controller from template'
 
   - bash:
-      git clone ai-factory-azure/project-$(PROJECT-NAME)-controller
+      git clone https://github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller
     continueOnError: true  
     displayName: 'Pull git repo controller and modify yml to reflect new repo name'  
   - bash:
