--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -37,6 +37,9 @@ jobs:
       echo '##vso[task.setvariable variable=GITHUB_TOKEN]$(AZURE-DEVOPS-EXT-GITHUB-PAT)'
     displayName: Set Github PAT for CLI
 
+  - bash:
+      #GITHUB LOGIN 
+
   - bash: 
       echo '##vso[task.setvariable variable=AZURE_DEVOPS_EXT_AZURE_RM_SERVICE_PRINCIPAL_KEY]$(AZURE-RM-SERVICE-PRINCIPAL-KEY-DEV)'
     displayName: Set Azure Service Principal value
@@ -86,7 +89,8 @@ jobs:
     displayName: 'Create git repo for the controller from template'
 
   - bash:
-      git clone https://github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller
+      git clone https://manu-kanwarpal:$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller
+
     continueOnError: true  
     displayName: 'Pull git repo controller and modify yml to reflect new repo name'  
   - bash:
