--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -90,11 +90,12 @@ jobs:
 
   - bash:
       git clone https://manu-kanwarpal:$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller
-
+      git remote set-url origin https://manu-kanwarpal:$(AZURE-DEVOPS-EXT-GITHUB-PAT)@github.com/ai-factory-azure/project-$(PROJECT-NAME)-controller
     continueOnError: true  
     displayName: 'Pull git repo controller and modify yml to reflect new repo name'  
+    
   - bash:
-      cd ai-factory-azure/project-$(PROJECT-NAME)-controller/devops-pipelines
+      cd project-$(PROJECT-NAME)-controller/devops-pipelines
     continueOnError: true  
   - bash:
       sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' * 
