--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -99,11 +99,11 @@ jobs:
 
   - bash:
       cd project-$(PROJECT-NAME)-controller/devops-pipelines
-      echo | ls
-      echo | sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml
-      echo | sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml
-      echo | git commit -am "modified ymls to reflect new repo name"s
-      echo | git push 
+      yes "" | ls
+      yes "" | sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml
+      yes "" | sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml
+      yes "" | git commit -am "modified ymls to reflect new repo name"s
+      yes "" | git push 
     continueOnError: true
 
   - bash:
