--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -98,14 +98,12 @@ jobs:
     continueOnError: true  
 
   - bash:
-      #!/bin/bash
-      cd project-$(PROJECT-NAME)-controller/devops-pipelines
-      ls
-      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml
-      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml
-      git commit -am "modified ymls to reflect new repo name"s
-      git push 
-      exec bash
+      (cd project-$(PROJECT-NAME)-controller/devops-pipelines; 
+      ls;
+      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-batch-scoring.yml;
+      sed 's/project-template-file-batch-code/$(PROJECT-NAME)/' deploy-model-training-pipeline.yml;
+      git commit -am "modified ymls to reflect new repo name";
+      git push) &
     continueOnError: true
 
   - bash:
