added continue on error for create Azure Service

--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -61,6 +61,7 @@ jobs:
                                           --name $(AZURE-SERVICE-ENDPOINT-NAME)
                                           --org $(System.TeamFoundationCollectionUri) 
                                           --project $(ADO-PROJECT-NAME)
+    continueOnError: true
     displayName: 'Create Azure Service Connection'
 
   - bash:
