--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -92,6 +92,11 @@ jobs:
 
   - bash:
       az pipelines create --name $(IAC-PIPELINE-NAME)
+    continueOnError: true               
+    displayName: 'Create blank IAC Pipeline'
+
+  - bash:
+      az pipelines update --name $(IAC-PIPELINE-NAME)
                           --description 'Pipeline for IAC'
                           --repository $(GITHUB-ORG-URL)/project-$(PROJECT-NAME)-iac
                           --branch $(IAC-BRANCH)
@@ -100,7 +105,7 @@ jobs:
                           --org $(System.TeamFoundationCollectionUri) 
                           --project $(ADO-PROJECT-NAME)   
                           --skip-first-run true                    
-    displayName: 'Create IAC Pipeline from YAML'
+    displayName: 'Update IAC Pipeline using YAML'
 
   - bash:
       az pipelines create --name $(MODEL-TRAINING-PIPELINE-NAME)
