--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -102,7 +102,7 @@ jobs:
     displayName: 'Create git repo for IAC from template'
 
   - bash: 
-      az pipelines delete --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(IAC-PIPELINE-NAME)|cut -d" " -f1) --yes
+      az pipelines delete --yes --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(IAC-PIPELINE-NAME)|cut -d" " -f1) 
     continueOnError: true
     displayName: 'Delete IAC Pipeline if exists'
 
@@ -119,9 +119,9 @@ jobs:
     displayName: 'Create IAC Pipeline using YAML'
 
   - bash: 
-    az pipelines delete --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(MODEL-TRAINING-PIPELINE-NAME)|cut -d" " -f1) --yes
-  continueOnError: true
-  displayName: 'Delete Training Pipeline if exists'
+    az pipelines delete --yes --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(MODEL-TRAINING-PIPELINE-NAME)|cut -d" " -f1)
+    continueOnError: true
+    displayName: 'Delete Training Pipeline if exists'
 
   - bash:
       az pipelines create --name $(MODEL-TRAINING-PIPELINE-NAME)
@@ -136,9 +136,9 @@ jobs:
     displayName: 'Create Training Pipeline from YAML'
 
   - bash: 
-    az pipelines delete --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(BATCH-SCORING-PIPELINE-NAME)|cut -d" " -f1) --yes
-  continueOnError: true
-  displayName: 'Delete Batch Scoring Pipeline if exists'
+    az pipelines delete --yes --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(BATCH-SCORING-PIPELINE-NAME)|cut -d" " -f1)
+    continueOnError: true
+    displayName: 'Delete Batch Scoring Pipeline if exists'
 
   - bash:
       az pipelines create --name $(BATCH-SCORING-PIPELINE-NAME)
