--- a/azuredevops/pipelines/azure-devops-iac.yml
+++ b/azuredevops/pipelines/azure-devops-iac.yml
@@ -119,9 +119,9 @@ jobs:
     displayName: 'Create IAC Pipeline using YAML'
 
   - bash: 
-    az pipelines delete --yes --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(MODEL-TRAINING-PIPELINE-NAME)|cut -d" " -f1)
+      az pipelines delete --yes --id $(az pipelines list --project $(ADO-PROJECT-NAME) -o table |grep $(MODEL-TRAINING-PIPELINE-NAME)|cut -d" " -f1) 
     continueOnError: true
-    displayName: 'Delete Training Pipeline if exists'
+    displayName: 'Delete IAC Pipeline if exists'
 
   - bash:
       az pipelines create --name $(MODEL-TRAINING-PIPELINE-NAME)
